--- a/src/components/ui/Hero.astro
+++ b/src/components/ui/Hero.astro
@@ -12,8 +12,7 @@ const {fullName, title, institute, profilePicture} = Astro.props
   </h1>
   <p class='text-xl text-gray-600 mb-4'>{title}{institute ? ` at ${institute}` : ''}</p>
   <p class='text-lg mb-6'>
-    Brief impactful description of your research focus and academic mission.
-    Highlight your key contributions and areas of expertise.
+    I am particularly interested in Reinforcement Learning, especially in scenarios where scalability is a key factor.
   </p>
   <div class='flex gap-4'>
     <SocialIcons />
@@ -24,6 +23,6 @@ const {fullName, title, institute, profilePicture} = Astro.props
   <Image
     src={profilePicture}
     alt={fullName}
-    class='w-full h-full mask mask-circle size-44'
+    class='w-full h-full object-contain'
   />
 </div>
